syntax = "proto3";
message FinoMsg {
  message User {
	int32 id = 1;
	string name = 2;
	bool roomMaster = 3;
  }
  message Content {
    message Img {
      string url = 1;
      int32 width = 2;
	    int32 height = 3;
    }
	string text = 1;
	Img img = 2;
  }
  string id = 1;
  User user = 2;
  string roomId = 3;
  Content content = 4;
}
/*
{
  id: 123,
  user:{
    id:1,
    name: "滴滴",
    roomMaster: false
  },
  roomId: "sslaglsjflsjflsfsgfws",
  content: {
    text: "这是测试消息",
    img: {
      url: "www.baidu.com",
      width: 240
    }
  }
}
**/